<resources>
    <string name="app_name">Eatventory</string>
    <string name="username">Username</string>
    <string name="loginBtn">Log In</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="pasword">Password</string>
    <string name="storage">Storage</string>
    <string name="items">Items</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="newItems">Add new Items</string>
    <string name="productId">Product ID</string>
    <string name="productName">Product Name</string>
    <string name="productImage">Product Image</string>

</resources>