<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/infoItemScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newItems"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/imageIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_launcher_foreground" />


                <TextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Result: " />


                <TextView
                    android:id="@+id/resultTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productIdLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productIdTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productNameLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productNameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productImageLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productImage">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productImageTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addItemBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />


            </LinearLayout>



        </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cameraFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/plus"
        app:srcCompat="@drawable/ic_cam_foreground"
        app:layout_anchor="@id/infoItemScroll"
        android:layout_marginBottom="80dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>